# gedit-latex

./: .gitignore  .project  .pydevproject  AUTHORS  ChangeLog  GeditLaTeXPlugin.gedit-plugin  GeditLaTeXPlugin.plugin  INSTALL  MAINTAINERS  Makefile.am  NEWS  README  README.md  __init__.py  bibtex.xml  configure.ac  from_source.sh  gedit-latex.doap  install-system.sh  install.sh  latex.plugin  latex.plugin.desktop.in.in  latex.xml  listings.xml  meson.build  org.gnome.gedit.plugins.latex.gschema.xml  preferences.xml  sl.po  snippets.xml  symbols.xml  tools.xml
build-aux/meson/: post_install.py
data/: Makefile.am  bibtex.xml  gschemas.compiled  latex.xml  listings.xml  org.gnome.gedit.plugins.latex.gschema.xml.in.in  symbols.xml  tools.xml
data/icons/: Makefile.am
data/templates/: Makefile.am
data/ui/: Makefile.am  build_image_dialog.ui  choose_master_dialog.ui  configure.ui  configure_tool.ui  insert_bibtex_entry.ui  insert_graphics_dialog.ui  insert_listing_dialog.ui  insert_table_dialog.ui  new_document_template_dialog.ui  ui-toolbar-combined.builder  ui-toolbar-disabled.builder  ui-toolbar-normal.builder  use_bibliography_dialog.ui
glade/: build_image_dialog.glade  choose_master_dialog.glade  configure.glade  configure_snippet.glade  configure_tool.glade  insert_bibtex_entry.glade  insert_graphics_dialog.glade  insert_listing_dialog.glade  insert_table_dialog.glade  new_document_dialog.glade  new_document_template_dialog.glade  save_as_template_dialog.glade  use_bibliography_dialog.glade
latex/: Makefile.am  __init__.py  action.py  appactivatable.py  bibtex.xml  completion.py  config.py  editor.py  file.py  gldefs.py.in  issues.py  job.py  org.gnome.gedit.plugins.latex.gschema.xml.in.in  outline.py  panelview.py  preferences.xml  preferences.xml.sample  relpath.py  resources.py  singleton.py  snippetmanager.py  tabdecorator.py  template.py  templates.py  tools.xml  util.py  views.py  windowactivatable.py  windowcontext.py
latex/base/: Makefile.am  __init__.py  action.py  appactivatable.py  completion.py  config.py  decorators.py  editor.py  file.py  job.py  resources.py  tabdecorator.py  templates.py  windowactivatable.py
latex/bibtex/: Makefile.am  __init__.py  actions.py  cache.py  completion.py  dialogs.py  editor.py  model.py  parser.py  validator.py  views.py
latex/icons/: Makefile.am
latex/latex/: Makefile.am  __init__.py  actions.py  archive.py  cache.py  completion.py  dialogs.py  editor.py  environment.py  expander.py  inversesearch.py  lexer.py  listing.py  livepreview.py  model.py  outline.py  parser.py  preview.py  spellcheck.py  validator.py  views.py
latex/preferences/: Makefile.am  __init__.py  dialog.py  tools.py
latex/snippets/: __init__.py  completion.py
latex/templates/: Makefile.am
latex/tools/: Makefile.am  __init__.py  postprocess.py  util.py  views.py
latex/typecheck/: Makefile.am  doctest_support.py
latex/ui/: Makefile.am  build_image_dialog.ui  choose_master_dialog.ui  configure.ui  configure_snippet.ui  configure_tool.ui  insert_bibtex_entry.ui  insert_graphics_dialog.ui  insert_listing_dialog.ui  insert_table_dialog.ui  new_document_dialog.ui  new_document_template_dialog.ui  save_as_template_dialog.ui  use_bibliography_dialog.ui  use_bibliography_multi_dialog.ui
latex/util/: Makefile.am  eps2png.pl
po/: LINGUAS  POTFILES.in  POTFILES.skip  bs.po  ca.po  cs.po  da.po  de.po  el.po  eo.po  es.po  eu.po  fr.po  gl.po  hi.po  hu.po  id.po  it.po  ka.po  ko.po  lv.po  nb.po  nl.po  oc.po  pl.po  pt.po  pt_BR.po  ro.po  ru.po  sl.po  sr.po  sr@latin.po  sv.po  th.po  tr.po  uk.po  zh_CN.po  zh_TW.po
src/: __init__.py  issues.py  outline.py  relpath.py  sandbox.py  snippets.xml  symbols.xml  util.py  views.py
src/base/: __init__.py  completion.py  config.py  decorators.py  interface.py  issues.py  job.py  preferences.py  resources.py  templates.py  util.py  views.py
src/bibtex/: actions.py  cache.py  completion.py  dialogs.py  editor.py  model.py  parser.py  validator.py  views.py
src/latex/: __init__.py  actions.py  archive.py  cache.py  completion.py  dialogs.py  editor.py  environment.py  expander.py  inversesearch.py  lexer.py  listing.py  livepreview.py  model.py  outline.py  parser.py  preview.py  spellcheck.py  validator.py  views.py
src/preferences/: __init__.py  dialog.py
src/snippets/: __init__.py  completion.py
src/tools/: __init__.py  postprocess.py  preprocess.py  util.py  views.py
src/typecheck/: __init__.py  mixins.py  sets.py  typeclasses.py
src/ui/: build_image_dialog.ui  choose_master_dialog.ui  configure.ui  configure_snippet.ui  insert_bibtex_entry.ui  insert_graphics_dialog.ui  insert_table_dialog.ui  use_bibliography_multi_dialog.ui
templates/: Default.template  KOMA_Letter_2.template  Slides.template
test/: article.bib  article.tex  chap2.tex  chap3.tex
