plugindir = $(datadir)/gedit/plugins/latex/ui

plugin_DATA = \
	ui-toolbar-combined.builder \
	ui-toolbar-disabled.builder \
	ui-toolbar-normal.builder \
	build_image_dialog.ui \
	choose_master_dialog.ui \
	configure.ui \
	configure_tool.ui \
	insert_bibtex_entry.ui \
	insert_graphics_dialog.ui \
	insert_listing_dialog.ui \
	insert_table_dialog.ui \
	new_document_template_dialog.ui \
	save_as_template_dialog.ui \
	use_bibliography_dialog.ui

EXTRA_DIST = $(plugin_DATA)

-include $(top_srcdir)/git.mk
