plugindir = $(libdir)/gedit/plugins/latex/icons

accentsdir = $(plugindir)/accents

accents_DATA = \
	accents/acute.png \
	accents/bar.png \
	accents/breve.png \
	accents/check.png \
	accents/ddot.png \
	accents/dot.png \
	accents/grave.png \
	accents/hat.png \
	accents/tilde.png \
	accents/vec.png 

arrowsdir = $(plugindir)/arrows

arrows_DATA = \
	arrows/hookleftarrow.png \
	arrows/hookrightarrow.png \
	arrows/leadsto.png \
	arrows/leftarrow.png \
	arrows/Leftarrow.png \
	arrows/leftharpoondown.png \
	arrows/leftharpoonup.png \
	arrows/leftrightarrow.png \
	arrows/Leftrightarrow.png \
	arrows/leftrightarrows.png \
	arrows/leftrightharpoons.png \
	arrows/longleftarrow.png \
	arrows/Longleftarrow.png \
	arrows/longleftrightarrow.png \
	arrows/Longleftrightarrow.png \
	arrows/longmapsto.png \
	arrows/longrightarrow.png \
	arrows/Longrightarrow.png \
	arrows/mapsto.png \
	arrows/rightarrow.png \
	arrows/Rightarrow.png \
	arrows/rightharpoondown.png \
	arrows/rightharpoonup.png \
	arrows/rightleftarrows.png \
	arrows/rightleftharpoons.png

greekdir = $(plugindir)/greek

greek_DATA = \
	greek/alpha.png \
	greek/beta.png \
	greek/chi.png \
	greek/delta.png \
	greek/Delta.png \
	greek/epsilon.png \
	greek/eta.png \
	greek/gamma.png \
	greek/Gamma.png \
	greek/iota.png \
	greek/kappa.png \
	greek/lambda.png \
	greek/Lambda.png \
	greek/mu.png \
	greek/nu.png \
	greek/omega.png \
	greek/Omega.png \
	greek/phi.png \
	greek/Phi.png \
	greek/pi.png \
	greek/Pi.png \
	greek/psi.png \
	greek/Psi.png \
	greek/rho.png \
	greek/sigma.png \
	greek/Sigma.png \
	greek/tau.png \
	greek/theta.png \
	greek/Theta.png \
	greek/upsilon.png \
	greek/Upsilon.png \
	greek/varepsilon.png \
	greek/varphi.png \
	greek/varpi.png \
	greek/varrho.png \
	greek/varsigma.png \
	greek/vartheta.png \
	greek/xi.png \
	greek/Xi.png \
	greek/zeta.png

limitersdir = $(plugindir)/limiters

limiters_DATA = \
	limiters/langle.png \
	limiters/lbrace.png \
	limiters/lceil.png \
	limiters/lfloor.png \
	limiters/rangle.png \
	limiters/rbrace.png \
	limiters/rceil.png \
	limiters/rfloor.png \
	limiters/vert.png \
	limiters/Vert.png

operatorsdir = $(plugindir)/operators

operators_DATA = \
	operators/approx.png \
	operators/ast.png \
	operators/bullet.png \
	operators/cap.png \
	operators/cdot.png \
	operators/circ.png \
	operators/cong.png \
	operators/cup.png \
	operators/div.png \
	operators/equiv.png \
	operators/eth.png \
	operators/exists.png \
	operators/forall.png \
	operators/geq.png \
	operators/gg.png \
	operators/in.png \
	operators/land.png \
	operators/leq.png \
	operators/ll.png \
	operators/lor.png \
	operators/mid.png \
	operators/nabla.png \
	operators/neg.png \
	operators/neq.png \
	operators/nexists.png \
	operators/ni.png \
	operators/oplus.png \
	operators/parallel.png \
	operators/partial.png \
	operators/perp.png \
	operators/pm.png \
	operators/propto.png \
	operators/setminus.png \
	operators/simeq.png \
	operators/sim.png \
	operators/star.png \
	operators/subseteq.png \
	operators/subset.png \
	operators/supseteq.png \
	operators/supset.png \
	operators/times.png \
	operators/uplus.png \
	operators/varnothing.png

specialdir = $(plugindir)/special

special_DATA = \
	special/aleph.png \
	special/angle.png \
	special/cdots.png \
	special/complement.png \
	special/dagger.png \
	special/ddots.png \
	special/ell.png \
	special/hbar.png \
	special/iint.png \
	special/Im.png \
	special/infty.png \
	special/int.png \
	special/ldots.png \
	special/oint.png \
	special/P.png \
	special/prime.png \
	special/prod.png \
	special/Re.png \
	special/S.png \
	special/sum.png \
	special/textcopyright.png \
	special/textregistered.png \
	special/texttrademark.png \
	special/vdots.png \
	special/wp.png

plugin_DATA = \
	abort.png \
	bb.png \
	bf.png \
	bib.png \
	braces.png \
	brackets.png \
	build-image.png \
	calendar.png \
	cal.png \
	chapter.png \
	close_env.png \
	description.png \
	displaymath.png \
	document.png \
	documents.png \
	dvbars.png \
	enumerate.png \
	eqnarray.png \
	equation.png \
	error.png \
	field.png \
	frak.png \
	graphics.png \
	i_choice.png \
	i_command.png \
	itemize.png \
	it.png \
	justify-center.png \
	justify-left.png \
	justify-right.png \
	label.png \
	listing.png \
	math.png \
	okay.png \
	outline.png \
	paragraph.png \
	parantheses.png \
	part.png \
	rm.png \
	run.png \
	sc.png \
	section.png \
	sf.png \
	snippet.png \
	subsection.png \
	subsubsection.png \
	table.png \
	task.png \
	tree_chapter.png \
	tree_includegraphics.png \
	tree_include.png \
	tree_paragraph.png \
	tree_part.png \
	tree_section.png \
	tree_subsection.png \
	tree_subsubsection.png \
	tree_table.png \
	tt.png \
	underline.png \
	uneqnarray.png \
	users.png \
	vbars.png \
	warning.png

-include $(top_srcdir)/git.mk
