plugindir = $(libdir)/gedit/plugins/latex/latex

plugin_PYTHON = \
	actions.py \
	cache.py \
	completion.py \
	dialogs.py \
	editor.py \
	environment.py \
	expander.py \
	__init__.py \
	lexer.py \
	listing.py \
	model.py \
	outline.py \
	parser.py \
	preview.py \
	validator.py \
	views.py

-include $(top_srcdir)/git.mk
